fixed layout issue in form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -265,3 +265,7 @@ header > input {
 .details > header + section {
   margin-top: 25px;
 }
+
+.list {
+  list-style-type: none;
+}
